a link to ONIC Twitter account (Onic_japan) changed from twitter.com to x.com.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@
 - name: Facebook
   link: https://www.facebook.com/ONICJapan/
 - name: X (Twitter)
-  link: https://twitter.com/Onic_japan
+  link: https://x.com/Onic_japan
 - name: Archives
   dropdown:
     - name: ONIC 2023
