--- a/_data/onic_sponsors.yml
+++ b/_data/onic_sponsors.yml
@@ -6,4 +6,10 @@
       logo: IIJ-ONIC.png
     - name: シスコシステムズ合同会社
       profile: https://www.cisco.com/c/ja_jp/index.html
-      logo: ONIC_Cisco.png   
+      logo: ONIC_Cisco.png
+    - name: NTTコミュニケーションズ株式会社
+      profile: https://www.ntt.com/index.html
+      logo: NTTcom.png
+    - name: 富士通株式会社
+      profile: https://global.fujitsu/ja-jp
+      logo: Fujitsu.png       
