--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -37,6 +37,7 @@
         - name_and_title: |-
             ONIC実行委員 - Nozomi Networks, Inc.
             橋本 賢一郎
+          photo: b_03.jpg
       abstract: |-
         明日の予習
     - title: 閉会
