--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -119,26 +119,28 @@
         様々な社会課題の中、建設業でもオープン化の取り組みが加速しています。本講演では、スマートビルの事例を交えながら、生産性向上を目指す「オープンBIM」、建物の魅力を維持するための「ビルOS」、データドリブンな建物を実現する「デジタルツイン」に関する最新の取り組みをご紹介します。
     - title: 休憩
       time: "15:00"           
-    - title: TBD
+    - title: グリーンな計算資源を積極的に利用する取り組み
       time: "15:30"
       type: 講演
       tag: s_07
       presenters:
         - name_and_title: |-
-            TBD
-          photo: placeholder-120x140.png            
+            トヨタ自動車株式会社
+            阿部 博    
+          photo: s_07.png            
       abstract: |-
-        TBD
-    - title: TBD
-      time: "TBD"
-      type: 講演
+        我が国はエネルギーの大半を輸入に依存しており、経済安全保障が重要な課題となっている。 また、再生可能エネルギーの利用が求められる一方、需要と供給のタイミングが合わず多くの再エネが破棄されている。 これらの破棄される再エネを計算需要とマッチさせるために、全国に分散コンピューティング基盤を構築しフィールドでの効果検証を進めている。 具体的には、沖縄に設置したコンテナ型データセンターを用いた実験ネットワークの構築や、 自社で開発した太陽光発電シミュレーターと計算基盤管理システムの統合による再エネ効率利用の実証、 また風力発電の近くに設置した蓄電設備への計算資源の導入による再エネを100%利用した分散コンピューティング基盤の設置計画している。 これら、グリーンな計算資源を積極的に利用する取り組みについて述べる。
+    - title: 何故今時 TCP/IP スタックを新しく実装しようとするのか
+      time: "16:00"
+      type: スポンサーセッション
       tag: s_08
       presenters:
         - name_and_title: |-
-            TBD
-          photo: placeholder-120x140.png            
+            株式会社インターネットイニシアティブ 技術研究所
+            安形 憲一
+          photo: s_08.png            
       abstract: |-
-        TBD
+        IIJ 技術研究所では、新しい TCP/IP スタックの実装に取り組んでいます (https://dl.acm.org/doi/10.1145/3687230.3687233)。TCP/IP スタックはコンピュータが TCP/IP を介して通信を行うことを可能にする、多くの場合ソフトウェアとして実装されている機能で、OS の特にカーネルの一部として長きに渡って開発が進められており、今現在、それらカーネルに含まれる実装の多くは成熟し広く利用されるに至っています。本発表では、そんな枯れた実装が存在する今何故また新しく TCP/IP スタックを実装しようとしているのかについてご説明します。
     - title: 休憩
       time: "TBD"           
     - title: TBD
