--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -127,7 +127,7 @@
         - name_and_title: |-
             トヨタ自動車株式会社
             阿部 博    
-          photo: s_07.png            
+          photo: s_07.jpg
       abstract: |-
         我が国はエネルギーの大半を輸入に依存しており、経済安全保障が重要な課題となっている。 また、再生可能エネルギーの利用が求められる一方、需要と供給のタイミングが合わず多くの再エネが破棄されている。 これらの破棄される再エネを計算需要とマッチさせるために、全国に分散コンピューティング基盤を構築しフィールドでの効果検証を進めている。 具体的には、沖縄に設置したコンテナ型データセンターを用いた実験ネットワークの構築や、 自社で開発した太陽光発電シミュレーターと計算基盤管理システムの統合による再エネ効率利用の実証、 また風力発電の近くに設置した蓄電設備への計算資源の導入による再エネを100%利用した分散コンピューティング基盤の設置計画している。 これら、グリーンな計算資源を積極的に利用する取り組みについて述べる。
     - title: 何故今時 TCP/IP スタックを新しく実装しようとするのか
@@ -138,7 +138,7 @@
         - name_and_title: |-
             株式会社インターネットイニシアティブ 技術研究所
             安形 憲一
-          photo: s_08.png            
+          photo: placeholder-120x140.png            
       abstract: |-
         IIJ 技術研究所では、新しい TCP/IP スタックの実装に取り組んでいます (https://dl.acm.org/doi/10.1145/3687230.3687233)。TCP/IP スタックはコンピュータが TCP/IP を介して通信を行うことを可能にする、多くの場合ソフトウェアとして実装されている機能で、OS の特にカーネルの一部として長きに渡って開発が進められており、今現在、それらカーネルに含まれる実装の多くは成熟し広く利用されるに至っています。本発表では、そんな枯れた実装が存在する今何故また新しく TCP/IP スタックを実装しようとしているのかについてご説明します。
     - title: 休憩
