--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -125,7 +125,7 @@
       tag: s_07
       presenters:
         - name_and_title: |-
-            トヨタ自動車株式会社
+            トヨタ自動車株式会社<br />
             阿部 博    
           photo: s_07.jpg
       abstract: |-
@@ -136,7 +136,7 @@
       tag: s_08
       presenters:
         - name_and_title: |-
-            株式会社インターネットイニシアティブ 技術研究所
+            株式会社インターネットイニシアティブ 技術研究所<br />
             安形 憲一
       abstract: |-
         IIJ 技術研究所では、新しい TCP/IP スタックの実装に取り組んでいます (https://dl.acm.org/doi/10.1145/3687230.3687233)。TCP/IP スタックはコンピュータが TCP/IP を介して通信を行うことを可能にする、多くの場合ソフトウェアとして実装されている機能で、OS の特にカーネルの一部として長きに渡って開発が進められており、今現在、それらカーネルに含まれる実装の多くは成熟し広く利用されるに至っています。本発表では、そんな枯れた実装が存在する今何故また新しく TCP/IP スタックを実装しようとしているのかについてご説明します。
