--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -96,7 +96,7 @@
         Local/Public 5G市場の活性化により、ネットワークファンクションの設置場所に関する要望が多様化しています。 自動化や運用効率化の観点からクラウド上に設置するケース、セキュリティや通信速度の観点からオンプレミスに設置するケースなどが考えられます。 本発表では、オンプレミス環境でクラウド機能を提供するHybrid Cloudソリューションを利用した5Gの実現性について、技術的・ビジネス的な観点から紹介します。
     - title: 休憩
       time: "12:00"           
-    - title: TBD
+    - title: 工場に求められるセキュリティ「セキュア生産」の取組み
       time: "13:30"
       type: 講演
       tag: s_04
@@ -104,9 +104,9 @@
         - name_and_title: |-
             日本電気株式会社
             淵上 真一
-          #photo: s_04.png            
+          #photo: s_04.jpg            
       abstract: |-
-        TBD - OT Security(tentative)
+        NECグループでは、工場セキュリティについて「セキュア生産」というコンセプトで試行錯誤を進めてきました。この取組みの内容や、取組から見えてきた課題など工場セキュリティの現実についてご紹介します。
     - title: 新たなICT基盤「DCI」におけるデータ処理・通信の制御のためのK8sコントローラ開発の取り組み
       time: "14:00"
       type: スポンサーセッション
