--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -104,7 +104,7 @@
         - name_and_title: |-
             日本電気株式会社
             淵上 真一
-          #photo: s_04.jpg            
+          photo: s_04.jpg            
       abstract: |-
         NECグループでは、工場セキュリティについて「セキュア生産」というコンセプトで試行錯誤を進めてきました。この取組みの内容や、取組から見えてきた課題など工場セキュリティの現実についてご紹介します。
     - title: 新たなICT基盤「DCI」におけるデータ処理・通信の制御のためのK8sコントローラ開発の取り組み
