--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -155,7 +155,7 @@
         IIJ 技術研究所では、新しい TCP/IP スタックの実装に取り組んでいます (https://dl.acm.org/doi/10.1145/3687230.3687233)。TCP/IP スタックはコンピュータが TCP/IP を介して通信を行うことを可能にする、多くの場合ソフトウェアとして実装されている機能で、OS の特にカーネルの一部として長きに渡って開発が進められており、今現在、それらカーネルに含まれる実装の多くは成熟し広く利用されるに至っています。本発表では、そんな枯れた実装が存在する今何故また新しく TCP/IP スタックを実装しようとしているのかについてご説明します。
     - title: 休憩
       time: "16:30"           
-    - title: Secret Talk PartⅡ（仮）
+    - title: （続）おとぎの国の DX
       time: "17:00"
       type: 講演
       tag: s_09
@@ -165,7 +165,7 @@
             関谷 勇司
           photo: s_09.jpg            
       abstract: |-
-        TBD
+        ONIC 2022 にて、おとぎの国の DX 推進に関するお話をさせて頂きました。その後についていくつかお問い合わせがありましたが、あくまでも私が想い描くおとぎの国の DX 推進でしたので、お答えしておりませんでした。そこで今回、おとぎの国がその後どうなったのか、私の多大なる妄想を元にお話させて頂ければと思います。
     - title: NTTコミュニケーションズにおける制御システムセキュリティの取組み
       time: "17:30"
       type: スポンサーセッション
