replace_hashiken_pic

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -42,7 +42,7 @@
         - name_and_title: |-
             ONIC実行委員/Nozomi Networks, Inc.
             橋本 賢一郎
-          photo: b_03.png
+          photo: b_03.JPG
       abstract: |-
         ONIC 2024では多くのOT, IoT, IIoTに関するセッションを準備しています. OTのネットワークってなんとなくわかっているけど, 具体的には触れたことがない方も多いと思います. 本セッションでは, 明日の予習としてOTの基礎知識に触れたいと思います.
     - title: 閉会
