change_hashiken-title

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -40,7 +40,7 @@
       tag: b_03
       presenters:
         - name_and_title: |-
-            ONIC実行委員/Nozomi Networks, Inc.
+            Nozomi Networks
             橋本 賢一郎
           photo: b_03.JPG
       abstract: |-
