add_slides_hashiken

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -45,8 +45,8 @@
           photo: b_03.JPG
       abstract: |-
         ONIC 2024では多くのOT, IoT, IIoTに関するセッションを準備しています. OTのネットワークってなんとなくわかっているけど, 具体的には触れたことがない方も多いと思います. 本セッションでは, 明日の予習としてOTの基礎知識に触れたいと思います.
-    #slides:
-        #- file: 2024-B-03_bof-hashiken.pdf
+      slides:
+        - file: 2024_B_03_bof_hashiken.pdf
     - title: 閉会
       time: "20:30"
 - date: October 11, 2024 (本会議@メインホール)
@@ -144,6 +144,8 @@
           photo: s_07.jpg
       abstract: |-
         我が国はエネルギーの大半を輸入に依存しており、経済安全保障が重要な課題となっている。 また、再生可能エネルギーの利用が求められる一方、需要と供給のタイミングが合わず多くの再エネが破棄されている。 これらの破棄される再エネを計算需要とマッチさせるために、全国に分散コンピューティング基盤を構築しフィールドでの効果検証を進めている。 具体的には、沖縄に設置したコンテナ型データセンターを用いた実験ネットワークの構築や、 自社で開発した太陽光発電シミュレーターと計算基盤管理システムの統合による再エネ効率利用の実証、 また風力発電の近くに設置した蓄電設備への計算資源の導入による再エネを100%利用した分散コンピューティング基盤の設置計画している。 これら、グリーンな計算資源を積極的に利用する取り組みについて述べる。
+      slides:
+        - file: 2024_S_07_toyota_abe.pdf
     - title: 何故今時 TCP/IP スタックを新しく実装しようとするのか
       time: "16:00"
       type: スポンサーセッション
@@ -190,6 +192,8 @@
           photo: s_10.jpeg            
       abstract: |-
         ShowNetは、インターネットテクノロジーイベント”Interop Tokyo”において構築される、世界最大のデモンストレーションネットワークです。2024年のShowNetバックボーンは、マルチベンダーによるuSIDを用いたSRv6およびEVPN/VXLANによって構築され、多数のユーザや大量のトラフィックに耐えるネットワークとして会場のトラフィックを収容しました。本講演では、このShowNetバックボーンや、衛星回線をSRv6によってシームレスに統合するといった取り組みについて、知見や課題を交えて紹介します。
+      slides:
+        - file: 2024_S_11_s_shownet2024_malo.pdf
     - title: 閉会の挨拶
       time: "18:30"
       presenters:
