--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -171,6 +171,8 @@
           photo: s_08.jpg
       abstract: |-
         IIJ 技術研究所では、新しい TCP/IP スタックの実装に取り組んでいます (https://dl.acm.org/doi/10.1145/3687230.3687233)。TCP/IP スタックはコンピュータが TCP/IP を介して通信を行うことを可能にする、多くの場合ソフトウェアとして実装されている機能で、OS の特にカーネルの一部として長きに渡って開発が進められており、今現在、それらカーネルに含まれる実装の多くは成熟し広く利用されるに至っています。本発表では、そんな枯れた実装が存在する今何故また新しく TCP/IP スタックを実装しようとしているのかについてご説明します。
+      slides:
+        - file: 2024_S_08_IIJ_KeniciYasugata.pdf
     - title: 休憩
       time: "16:30"           
     - title: （続）おとぎの国の DX
