added keywords for BOF2 and SLOT3

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -34,6 +34,8 @@
           photo: b_02_2.JPG
       abstract: |-
         ONIC2023で発表したクラウドネイティブ技術を活用したOSSのＮＷコントローラ『Kuesta』は2022、2023、2024年と進化を続けており、今年度にはK-SOT（ケー・ソット）とリネームを行い、次年度の社内導入を狙って着々と開発を続けている。本発表ではONIC2023からの進化内容、現状の開発状況、次年度以降の導入ターゲットについて紹介する。
+
+        キーワード:**K-SOT**, **Kubernetes**, **github**, **宣言的**, **NWコントローラー**
       slides:
         - file: 2024_B_01_NTT_Communications_Corporation_Tatsuki_Sakai_Kohei_Tamesue.pdf
     - title: 歓談
@@ -106,6 +108,8 @@
           photo:  s_03_2.jpg     
       abstract: |-
         Local/Public 5G市場の活性化により、ネットワークファンクションの設置場所に関する要望が多様化しています。 自動化や運用効率化の観点からクラウド上に設置するケース、セキュリティや通信速度の観点からオンプレミスに設置するケースなどが考えられます。 本発表では、オンプレミス環境でクラウド機能を提供するHybrid Cloudソリューションを利用した5Gの実現性について、技術的・ビジネス的な観点から紹介します。
+
+        キーワード:**L5G**, **P5G**, **Hybrid Cloud**, **自動化**, **CI/CD**
       slides:
         - file: 2024_S_3_NTT_Communications_Corporation_Yasuhiro_Fujita_Kengo_Naito.pdf
     - title: 休憩
